{
    "name": "CodeEditorAction",
    "maps": [
        {
            "name": "CodeEditor_ShortCut",
            "id": "e11d6184-fcd4-4a25-847a-45e0c57df8ab",
            "actions": [
                {
                    "name": "Undo",
                    "type": "Button",
                    "id": "80f56da9-4f1f-462c-a9e2-da63fc3e7e08",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Redo2",
                    "type": "Button",
                    "id": "88c83f61-f33a-480e-a084-108a1c4e6b6a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Paste",
                    "type": "Button",
                    "id": "3901a90c-8852-4221-a924-82c88584e441",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UnIndent",
                    "type": "Button",
                    "id": "a273be4d-a6cf-4236-a509-360472479c7c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Redo",
                    "type": "Button",
                    "id": "7e515acb-1de2-4a69-a53d-7aa7be1fc9de",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Undo",
                    "id": "f6708f6c-ff66-4b27-bf42-518d3015f1e2",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Undo",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "ea7903bf-837e-483e-b6c4-111f09b9b894",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Undo",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "e3b38298-8910-4839-9fd2-244a552ff15d",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Undo",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Redo2",
                    "id": "5ae9466d-4abd-4f36-9194-3b5d879d71a9",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Redo2",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "0c60e2ed-54ef-46d1-a868-7fc358c9d401",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Redo2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "48fe7364-1ca9-4aaf-bf57-6216fa697611",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Redo2",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Paste",
                    "id": "983acf95-990e-4b0f-93e4-55233d5929e9",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Paste",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "41ebec8b-8919-4e19-8c0f-1d27303ff2cc",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Paste",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "9526434f-7f71-408e-afb2-63805aaf46c6",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Paste",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "UnIndent",
                    "id": "3de6cad7-36ad-4da2-b657-4dbf6a0ef542",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnIndent",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "f151a76f-7c0d-4286-8575-dc49ded6cb54",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnIndent",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "f76386ca-9bae-43e7-838c-79fb7e479f46",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnIndent",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Two Modifiers",
                    "id": "6580ee1d-1cec-489e-b605-4cd049419978",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Redo",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "af2d4a54-6613-4a69-aa0a-5077252a40cc",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Redo",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "2aa0bfa0-33d3-4c8b-9af1-ad9bf965c305",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Redo",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "83d74807-7e2e-451a-ab4a-a516577fa3c4",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Redo",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "CodeEditor_Normal",
            "id": "8c2b68e1-4dcb-4c6b-a3ae-775c31cc9ea4",
            "actions": [
                {
                    "name": "Tab",
                    "type": "Button",
                    "id": "7e4ff495-ddd6-4824-899f-0d83db3bdcba",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Enter",
                    "type": "Button",
                    "id": "f916b479-be6d-4a00-985e-6e6d6d5af910",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Backspace",
                    "type": "Button",
                    "id": "66085f4b-a521-4431-9e25-a37ca2714456",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Escape",
                    "type": "Button",
                    "id": "2ba4b277-616c-4afe-85af-ed3f8c19c7b1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "04c2d99b-e748-499f-a03e-eb56ee578f36",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb25ddb5-ee55-4c9c-9287-a85f959067f2",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Enter",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13d6a3aa-10e1-40fb-821e-b11cac66a2cb",
                    "path": "<Keyboard>/backspace",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Backspace",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5555c077-79be-41e0-973d-df3706a9bfb8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Escape",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CodeEditor_AutoComplete",
            "id": "64d5b7c2-0dfc-45df-8b7b-e5fe505a3283",
            "actions": [
                {
                    "name": "ArrowUp",
                    "type": "Button",
                    "id": "015b5c4a-90dd-493a-9f67-f431ccd16938",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ArrowDown",
                    "type": "Button",
                    "id": "b536e58d-3e81-4a48-b9d2-3a141794d58f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c8b53b9a-c2e7-46a3-85f1-14e47f5fe399",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c32d84d-73a2-4142-832a-b0f14d84d9b5",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ArrowDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}